CSS: Fix the gradient of the header bar on mobile devices
Previously, when the width was small enough, the gradient would
collapse into a bi-coloured white/brown area with a hard transition.

The new gradient looks nicer while being close to the old look for
medium-sized viewports.

--- a/app/assets/stylesheets/RonRonnement.css.scss
+++ b/app/assets/stylesheets/RonRonnement.css.scss
@@ -1576,6 +1576,7 @@ img {
     padding: 0 3px;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    background: linear-gradient(to right, #e7e3e0, #bdb3aa 50%);
   }
 
   #sidebar {
